--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="top-section">
                     <!-- Foto -->
                     <div class="photo-frame">
-                        <img src="/foto.jpg" alt="Foto" id="displayPhoto">
+                        <img src="/bia.jpg" alt="Foto" id="displayPhoto">
                     </div>
                     
                     <!-- Nome e Curso -->
@@ -273,7 +273,7 @@
             nome: "Beatriz Ferreira Spacca",
             universidade: "UFBRA",
             curso: "Psicologia",
-            matricula: "11366503",
+            matricula: "1136503",
             nascimento: "11/08/2000",
             rg: "551417407",
             cpf: "48849365829",
