--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 <div class="top-section">
                     <!-- Foto -->
                     <div class="photo-frame">
-                        <img src="/bia.jpg" alt="Foto" id="displayPhoto">
+                        <img src="src/bia.jpg" alt="Foto" id="displayPhoto">
                     </div>
                     
                     <!-- Nome e Curso -->
